WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42926
Frequent ASSERT_NOT_REACHED in Connection::processIncomingMessage when running regression tests
https://bugs.webkit.org/show_bug.cgi?id=42926
Summary
Frequent ASSERT_NOT_REACHED in Connection::processIncomingMessage when runnin...
Alexey Proskuryakov
Reported
2010-07-24 00:48:37 PDT
I'm getting very frequent crashes on regression tests. Could be related to the editing tests I'm trying to enable, or a slower machine (Core 2 Duo iMac) - I didn't see these a few days before on a Mac Pro. Hopefully, the stack trace will make sense.
Attachments
crash log
(31.66 KB, application/octet-stream)
2010-07-24 00:59 PDT
,
Alexey Proskuryakov
no flags
Details
Patch
(1.62 KB, patch)
2010-08-03 10:30 PDT
,
Anders Carlsson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-07-24 00:59:12 PDT
Created
attachment 62490
[details]
crash log
Alexey Proskuryakov
Comment 2
2010-08-03 07:29:16 PDT
Oops, I was looking at a wrong thread. Re-titling the bug.
Anders Carlsson
Comment 3
2010-08-03 09:21:19 PDT
<
rdar://problem/8237329
>
Anders Carlsson
Comment 4
2010-08-03 10:30:12 PDT
Created
attachment 63347
[details]
Patch
Adam Roben (:aroben)
Comment 5
2010-08-03 10:34:56 PDT
Comment on
attachment 63347
[details]
Patch r=me
Anders Carlsson
Comment 6
2010-08-03 10:40:13 PDT
Committed
r64564
: <
http://trac.webkit.org/changeset/64564
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug