Frequent ASSERT_NOT_REACHED in Connection::processIncomingMessage when running regression tests https://bugs.webkit.org/show_bug.cgi?id=42926 <rdar://problem/8237329>

Reviewed by Adam Roben.

Remove this assert, it's bogus. It would fire when a reply came in on the connection queue before
waitForReply was called on the client thread, but that case is already covered.

* Platform/CoreIPC/Connection.cpp:
(CoreIPC::Connection::processIncomingMessage):

Canonical link: https://commits.webkit.org/55386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64564 268f45cc-cd09-0410-ab3c-d52691b4dbfc