WebKit2/Platform/CoreIPC/Connection.cpp
@@ -175,11 +175,6 @@ void Connection::processIncomingMessage(MessageID messageID, PassOwnPtr<Argument
         }
     }
 
-    if (messageID == MessageID(CoreIPCMessage::SyncMessageReply)) {
-        // FIXME: We got a reply for another sync message someone sent, handle this.
-        ASSERT_NOT_REACHED();
-    }
-
     MutexLocker locker(m_incomingMessagesLock);
     m_incomingMessages.append(IncomingMessage(messageID, arguments));
 
